# e-ink-with-kinetis

./: .cproject  .cwGeneratedFileSetLog  .gdbinit  .gitignore  .gitlab-ci.yml  .project  LICENSE  MKL17Z256xxx4_flash.ld  Makefile  README.md  e-ink-with-kinetis_Debug_OpenOCD.launch  e-ink-with-kinetis_Debug_PNE.launch  e-ink-with-kinetis_Debug_Segger.launch  e-ink-with-kinetis_Release_OpenOCD.launch  e-ink-with-kinetis_Release_PNE.launch  e-ink-with-kinetis_Release_Segger.launch  kx.cfg
CMSIS/: MKL17Z4.h  MKL17Z4_features.h  fsl_device_registers.h
Debug/: e-ink-with-kinetis.map  makefile  sources.mk
Debug/board/: subdir.mk
Debug/drivers/: subdir.mk
Debug/source/: subdir.mk
Debug/source/u8glib/: subdir.mk
Debug/startup/: subdir.mk
Debug/utilities/: subdir.mk
board/: board.h  pin_mux.c
docs/: GDEW0154Z04(三色BWR).rar  openocd.txt
docs/1.54display/Project/: JLinkLog.txt  mdk.uvgui.Administrator  mdk.uvgui_Administrator.bak  (+5 more)
drivers/: fsl_clock.c  fsl_clock.h  fsl_spi_dma.c
settings/: e-ink-testing_Debug_Segger.launch  e-ink-testing_Release_Segger.launch
source/: Display_EPD_W21.h  Display_EPD_W21_spi.c  Display_EPD_W21_spi.h  display.c  display.h  main.c  okio_bubble.h  qrcode.h  screens.h  screens_bits.h
source/u8glib/: .vimrc  cscope.out  u8g.h  u8g_com_i2c.c  u8g_font_data.c  u8g_pb200h1.c  u8g_pb8h1.c  u8g_rot.c
startup/: startup_MKL17Z4.S  system_MKL17Z4.c  system_MKL17Z4.h
ui/: .vimrc  CMakeLists.txt  Makefile  main.c  u8g_dev_sdl.c
ui/design/: convert_all.sh  coordinate_calculator.ods  okio_bubble_64.xcf  screens.h  screens_bits.h
(+35 files in other folders)
